# VulkanEngine_

./: .gitignore  .gitmodules  CMakeLists.txt  boost.cmake  main.cpp
config/: config.cmake  config.h  config_prop.h  config_property.h  config_utils.cpp
core/: core.cmake  engine.h  folders.h  typedefs.h  utils_vulkan.h
core/io/: base_image_loader.cpp  base_image_loader.h  bitmap.cpp  bitmap.h  file_type.h  image_loader.h  logger.cpp  resource.cpp  resource.h
core/object/: argument.h  object.h  object_db.h  object_id.h  property.cpp  property.h  type.h  variant.h
core/serialize/: serializable_enum.h
core/string/: string_name.h  string_types.h
core/templates/: safe_num.h
exception/: exception.cmake
graphic/: editor_image.cpp  editor_image.h  graphic.cmake  vulkan_image.cpp  vulkan_image.h  vulkan_renderpass.h
gui/: editor.h  editor_client_window.cpp  editor_client_window.h  gui.cmake  window.cpp  window.h
gui/windows/: content_browser_window.cpp  content_browser_window.h  debug_window.cpp  debug_window.h  scene_window.cpp  scene_window.h  text_editor_window.cpp  text_editor_window.h
imgui/: imgui.cmake
main/: application.cpp  application.h
manager/: default_loaders.h  glfw_window.cpp  glfw_window.h  logger_manager.cpp  logger_manager.h  manager.cmake  memory_manager.cpp  memory_manager.h  resource_manager.cpp  resource_manager.h  system_manager.cpp  system_manager.h  thread_pool_manager.h  timer_manager.h  window_manager.cpp  window_manager.h
manager/rendering/: presentation_manager.h  presentation_ui_manager.cpp  presentation_ui_manager.h  render_device.cpp  render_device.h  render_imgui.cpp  render_imgui.h  render_scene.cpp  render_scene.h  render_scene_ui.cpp  render_scene_ui.h
plugin/pinclude/: basic_shared_types.h
